--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
               <a href="#" class="link current site-nav-link">Студія</a>
             </li>
             <li>
-              <a href="./portfolio.html" class="link site-nav-link">Портфоліо</a>
+              <a href="./portfolio.html" class="link site-nav-link">
+                Портфоліо</a
+              >
             </li>
             <li>
               <a href="#" class="link site-nav-link">Контакти</a>
@@ -42,18 +44,26 @@
 
         <ul class="site-contact list">
           <li class="mail">
-            <a href="mailto:info@devstudio.com" class="link  site-nav-link"
-              >info@devstudio.com</a
+            <a href="mailto:info@devstudio.com" class="link site-nav-link">
+              <svg class="mail-icon" width="16" height="12">
+                <use href="./image/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
-          <li>
-            <a href="tel:+380961111111" class="link site-nav-link">+38 096 111 11 11</a>
+          <li class="phone">
+            <a href="tel:+380961111111" class="link site-nav-link">
+              <svg class="phone-icon" width="10" height="16">
+                <use href="./image/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
     </header>
     <main>
-      <section class="hero">
+      <section class="hero bg">
         <div class="container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="hero-btn">Замовити послугу</button>
@@ -64,6 +74,11 @@
           <h2 class="hidden">Особливості</h2>
           <ul class="features list">
             <li class="features-item">
+              <div class="icon">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./image/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="Features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="features-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -71,6 +86,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="icon">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./image/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="Features-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="features-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -78,12 +98,22 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="icon">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./image/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="Features-title">ПЛАНУВАННЯ</h3>
               <p class="features-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="features-item">
+              <div class="icon">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./image/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="Features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="features-text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -130,6 +160,36 @@
               <div class="team-item-container">
                 <h3 class="team-title">Ігор Дем'яненко</h3>
                 <p lang="en" class="team-position">Product Designer</p>
+                <ul class="team-social-list">
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use href="./image/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use href="./image/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use href="./image/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use href="./image/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -141,6 +201,36 @@
               <div class="team-item-container">
                 <h3 class="team-title">Ольга Рєпіна</h3>
                 <p lang="en" class="team-position">Frontend Developer</p>
+                <ul class="team-social-list">
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use href="./image/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use href="./image/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use href="./image/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use href="./image/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -152,6 +242,36 @@
               <div class="team-item-container">
                 <h3 class="team-title">Микола Тарасов</h3>
                 <p lang="en" class="team-position">Marketing</p>
+                <ul class="team-social-list">
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use href="./image/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use href="./image/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use href="./image/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use href="./image/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -163,7 +283,86 @@
               <div class="team-item-container">
                 <h3 class="team-title">Михайло Єрмаков</h3>
                 <p lang="en" class="team-position">UI Designer</p>
+                <ul class="team-social-list">
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use href="./image/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use href="./image/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use href="./image/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                      <svg class="team-social-icon" width="20" height="20">
+                        <use href="./image/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section section-clients">
+        <div class="container">
+          <h2 class="section-title">Постійні клієнти</h2>
+          <ul class="clients list">
+            <li class="clients-item">
+              <a href="#" class="clients-link link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./image/icons.svg#icon-Logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="#" class="clients-link link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./image/icons.svg#icon-Logo1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="#" class="clients-link link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./image/icons.svg#icon-Logo2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="#" class="clients-link link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./image/icons.svg#icon-Logo3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="#" class="clients-link link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./image/icons.svg#icon-Logo4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="#" class="clients-link link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./image/icons.svg#icon-Logo5"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -171,26 +370,65 @@
     </main>
     <footer class="footer">
       <div class="container footer-container">
-        <a href="./index.html" class="footer-logo logo"
-          ><span class="web">Web</span>Studio</a
-        >
-        <address class="footer-address">
-          <ul class="contacts list footer-contacts">
-            <li class="contacts-item">
-              <a href="#" class="adress-link link site-nav-link"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
-            </li>
-            <li class="contacts-item">
-              <a href="mailto:info@devstudio.com" class="link site-nav-link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a href="tel:+380961111111" class="link site-nav-link">+38 (096) 111 11 11</a>
-            </li>
-          </ul>
-        </address>
+        <ul class="footer-container-list">
+          <li>
+            <a href="./index.html" class="footer-logo logo"
+              ><span class="web">Web</span>Studio</a
+            >
+            <address class="footer-address">
+              <ul class="contacts list footer-contacts">
+                <li class="contacts-item">
+                  <a href="#" class="adress-link link site-nav-link"
+                    >м. Київ, пр-т Лесі Українки, 26</a
+                  >
+                </li>
+                <li class="contacts-item">
+                  <a href="mailto:info@devstudio.com" class="link site-nav-link"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="contacts-item">
+                  <a href="tel:+380961111111" class="link site-nav-link"
+                    >+38 (096) 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </li>
+          <li>
+            <h2 class="section-title footer-title">приєднуйтесь</h2>
+            <ul class="footer-soc-list">
+              <li class="footer-soc-item">
+                <a href="#" class="footer-soc-link link">
+                  <svg class="footer-soc-icon" width="20" height="20">
+                    <use href="./image/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-soc-item">
+                <a href="#" class="footer-soc-link link">
+                  <svg class="footer-soc-icon" width="20" height="20">
+                    <use href="./image/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-soc-item">
+                <a href="#" class="footer-soc-link link">
+                  <svg class="footer-soc-icon" width="20" height="20">
+                    <use href="./image/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-soc-item">
+                <a href="#" class="footer-soc-link link">
+                  <svg class="footer-soc-icon" width="20" height="20">
+                    <use href="./image/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
