--- a/portfolio.html
+++ b/portfolio.html
@@ -18,10 +18,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link
-      rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
-    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -36,7 +32,7 @@
               <a href="./index.html" class="link site-nav-link">Студія</a>
             </li>
             <li>
-              <a href="#" class="link current site-nav-link">Портфоліо</a>
+              <a href="#" class="link current site-nav-link"> Портфоліо</a>
             </li>
             <li>
               <a href="#" class="link site-nav-link">Контакти</a>
@@ -46,12 +42,20 @@
 
         <ul class="site-contact list">
           <li class="mail">
-            <a href="mailto:info@devstudio.com" class="link  site-nav-link"
-              >info@devstudio.com</a
+            <a href="mailto:info@devstudio.com" class="link site-nav-link">
+              <svg class="mail-icon" width="16" height="12">
+                <use href="./image/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
-          <li>
-            <a href="tel:+380961111111" class="link site-nav-link">+38 096 111 11 11</a>
+          <li class="phone">
+            <a href="tel:+380961111111" class="link site-nav-link">
+              <svg class="phone-icon" width="10" height="16">
+                <use href="./image/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -182,26 +186,65 @@
     </main>
     <footer class="footer">
       <div class="container footer-container">
-        <a href="./index.html" class="footer-logo logo"
-          ><span class="web">Web</span>Studio</a
-        >
-        <address class="footer-address">
-          <ul class="contacts list footer-contacts">
-            <li class="contacts-item">
-              <a href="#" class="adress-link link site-nav-link"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
-            </li>
-            <li class="contacts-item">
-              <a href="mailto:info@devstudio.com" class="link site-nav-link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a href="tel:+380961111111" class="link site-nav-link">+38 (096) 111 11 11</a>
-            </li>
-          </ul>
-        </address>
+        <ul class="footer-container-list">
+          <li>
+            <a href="./index.html" class="footer-logo logo"
+              ><span class="web">Web</span>Studio</a
+            >
+            <address class="footer-address">
+              <ul class="contacts list footer-contacts">
+                <li class="contacts-item">
+                  <a href="#" class="adress-link link site-nav-link"
+                    >м. Київ, пр-т Лесі Українки, 26</a
+                  >
+                </li>
+                <li class="contacts-item">
+                  <a href="mailto:info@devstudio.com" class="link site-nav-link"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="contacts-item">
+                  <a href="tel:+380961111111" class="link site-nav-link"
+                    >+38 (096) 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </li>
+          <li>
+            <h2 class="section-title footer-title">приєднуйтесь</h2>
+            <ul class="footer-soc-list">
+              <li class="footer-soc-item">
+                <a href="#" class="footer-soc-link link">
+                  <svg class="footer-soc-icon" width="20" height="20">
+                    <use href="./image/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-soc-item">
+                <a href="#" class="footer-soc-link link">
+                  <svg class="footer-soc-icon" width="20" height="20">
+                    <use href="./image/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-soc-item">
+                <a href="#" class="footer-soc-link link">
+                  <svg class="footer-soc-icon" width="20" height="20">
+                    <use href="./image/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-soc-item">
+                <a href="#" class="footer-soc-link link">
+                  <svg class="footer-soc-icon" width="20" height="20">
+                    <use href="./image/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
