--- a/portfolio.html
+++ b/portfolio.html
@@ -29,10 +29,12 @@
         <nav class="navigation">
           <ul class="site-nav list">
             <li>
-              <a href="./index.html" class="link site-nav-link">Студія</a>
+              <a href="./index.html" class="link  site-nav-link">Студія</a>
             </li>
             <li>
-              <a href="#" class="link current site-nav-link"> Портфоліо</a>
+              <a href="#" class="link current site-nav-link">
+                Портфоліо</a
+              >
             </li>
             <li>
               <a href="#" class="link site-nav-link">Контакти</a>
@@ -186,65 +188,63 @@
     </main>
     <footer class="footer">
       <div class="container footer-container">
-        <ul class="footer-container-list">
-          <li>
-            <a href="./index.html" class="footer-logo logo"
-              ><span class="web">Web</span>Studio</a
-            >
-            <address class="footer-address">
-              <ul class="contacts list footer-contacts">
-                <li class="contacts-item">
-                  <a href="#" class="adress-link link site-nav-link"
-                    >м. Київ, пр-т Лесі Українки, 26</a
-                  >
-                </li>
-                <li class="contacts-item">
-                  <a href="mailto:info@devstudio.com" class="link site-nav-link"
-                    >info@devstudio.com</a
-                  >
-                </li>
-                <li class="contacts-item">
-                  <a href="tel:+380961111111" class="link site-nav-link"
-                    >+38 (096) 111 11 11</a
-                  >
-                </li>
-              </ul>
-            </address>
-          </li>
-          <li>
-            <h2 class="section-title footer-title">приєднуйтесь</h2>
-            <ul class="footer-soc-list">
-              <li class="footer-soc-item">
-                <a href="#" class="footer-soc-link link">
-                  <svg class="footer-soc-icon" width="20" height="20">
-                    <use href="./image/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
+        <div class="footer-container-list">
+          <a href="./index.html" class="footer-logo logo"
+            ><span class="web">Web</span>Studio</a
+          >
+          <address class="footer-address">
+            <ul class="contacts list footer-contacts">
+              <li class="contacts-item">
+                <a href="#" class="adress-link link site-nav-link"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
               </li>
-              <li class="footer-soc-item">
-                <a href="#" class="footer-soc-link link">
-                  <svg class="footer-soc-icon" width="20" height="20">
-                    <use href="./image/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
+              <li class="contacts-item">
+                <a href="mailto:info@devstudio.com" class="link site-nav-link"
+                  >info@devstudio.com</a
+                >
               </li>
-              <li class="footer-soc-item">
-                <a href="#" class="footer-soc-link link">
-                  <svg class="footer-soc-icon" width="20" height="20">
-                    <use href="./image/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer-soc-item">
-                <a href="#" class="footer-soc-link link">
-                  <svg class="footer-soc-icon" width="20" height="20">
-                    <use href="./image/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
+              <li class="contacts-item">
+                <a href="tel:+380961111111" class="link site-nav-link"
+                  >+38 (096) 111 11 11</a
+                >
               </li>
             </ul>
-          </li>
-        </ul>
+          </address>
+        </div>            
+        <div class="footer-container-list">
+          <p class="section-title footer-title">приєднуйтесь</p>
+          <ul class="footer-soc-list">
+            <li class="footer-soc-item">
+              <a href="#" class="footer-soc-link link">
+                <svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./image/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="#" class="footer-soc-link link">
+                <svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./image/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="#" class="footer-soc-link link">
+                <svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./image/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="#" class="footer-soc-link link">
+                <svg class="footer-soc-icon" width="20" height="20">
+                  <use href="./image/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
