--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
             </ul>
           </address>
         </div>            
-        <div class="footer-container-list">
+        <div >
           <p class="section-title footer-title">приєднуйтесь</p>
           <ul class="footer-soc-list">
             <li class="footer-soc-item">
